--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -236,3 +236,6 @@ task postCommit {
   dependsOn integrationTest
   dependsOn integrationTestKms
 }
+task wrapper(type: Wrapper){
+  gradleVersion = '7.4.2'
+}
